Pagination and truncation fixes

--- a/static/style.css
+++ b/static/style.css
@@ -151,11 +151,6 @@ h6, .h6 {
 .blog-data{
   margin-left:100px;
 }
-.condensed{
-    height: 300px;
-    overflow: hidden;
-}
-
 
 /*
  * Footer
